Added scss and started to style landing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Alan Jack's Github</title>
+</head>
+<body>
+    <nav>
+        <span class="brand">Alan Jack</span>
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="hero">
+        <div class="hero-text">
+            <h1>Alan Jack's Landing Page</h1>
+            <p>This is my github page where you will find all my latest workings.  </p>
+            <button type="button" class="btn btn-primary">View Projects</button>
+
+        </div>
+    </div>
+
+    <section class="About">
+        <h2>About</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio natus asperiores culpa, doloribus expedita impedit voluptatum corporis minus odio sequi excepturi aut magni est hic saepe mollitia voluptatem esse perspiciatis laborum ipsam vel. Doloremque eveniet veritatis voluptate, expedita magni nobis laudantium natus voluptatem. Quasi beatae dignissimos, velit fugit distinctio voluptatem omnis amet sequi, praesentium dolorum animi laudantium dolores autem eos molestiae doloremque eveniet consequatur? Similique et, assumenda sint laborum sunt error autem quod debitis deserunt nobis natus omnis dolor asperiores! Qui a suscipit dignissimos ut magnam fugit minima, nam tempora itaque atque enim, omnis reprehenderit numquam tenetur sapiente cupiditate maxime commodi animi quisquam. Obcaecati illum magnam quae deleniti similique suscipit alias maiores molestiae porro a voluptatum aut ipsum laudantium voluptates nulla assumenda soluta, quia illo modi facere amet aliquid accusantium voluptatem! Voluptatibus ducimus, ad hic enim minus, officiis vitae magnam minima omnis soluta unde officia consequuntur. Porro, unde quis aspernatur, similique ipsam soluta in incidunt pariatur enim dolorem reprehenderit eos delectus. Est sequi nemo numquam consectetur qui temporibus ad commodi voluptate quos. Consectetur voluptate reiciendis rem! Explicabo, enim corporis voluptatum natus dolor fugiat reprehenderit nisi, accusamus ipsa perferendis odit dicta impedit sunt. Quibusdam nam ipsam aliquam omnis temporibus reiciendis sunt?</p>
+    </section>
+
+    <section class="projects">
+        <h2>Projects</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio natus asperiores culpa, doloribus expedita impedit voluptatum corporis minus odio sequi excepturi aut magni est hic saepe mollitia voluptatem esse perspiciatis laborum ipsam vel. Doloremque eveniet veritatis voluptate, expedita magni nobis laudantium natus voluptatem. Quasi beatae dignissimos, velit fugit distinctio voluptatem omnis amet sequi, praesentium dolorum animi laudantium dolores autem eos molestiae doloremque eveniet consequatur? Similique et, assumenda sint laborum sunt error autem quod debitis deserunt nobis natus omnis dolor asperiores! Qui a suscipit dignissimos ut magnam fugit minima, nam tempora itaque atque enim, omnis reprehenderit numquam tenetur sapiente cupiditate maxime commodi animi quisquam. Obcaecati illum magnam quae deleniti similique suscipit alias maiores molestiae porro a voluptatum aut ipsum laudantium voluptates nulla assumenda soluta, quia illo modi facere amet aliquid accusantium voluptatem! Voluptatibus ducimus, ad hic enim minus, officiis vitae magnam minima omnis soluta unde officia consequuntur. Porro, unde quis aspernatur, similique ipsam soluta in incidunt pariatur enim dolorem reprehenderit eos delectus. Est sequi nemo numquam consectetur qui temporibus ad commodi voluptate quos. Consectetur voluptate reiciendis rem! Explicabo, enim corporis voluptatum natus dolor fugiat reprehenderit nisi, accusamus ipsa perferendis odit dicta impedit sunt. Quibusdam nam ipsam aliquam omnis temporibus reiciendis sunt?</p>
+    </section>
+
+    <section class="education">
+        <h2>Education</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia id, voluptate autem adipisci, accusamus eaque reiciendis corporis magni ipsam laudantium sunt. Repellat asperiores amet vel error cumque tempore mollitia eligendi ut sapiente, libero voluptatum dolore id, voluptatibus, aut placeat assumenda quos dolorem ab exercitationem beatae qui facere quaerat nobis omnis! Sunt maxime sequi culpa, perferendis tempora, accusantium error quis molestias dolores nam, itaque nulla ad fugiat doloremque consequuntur velit esse alias impedit dolore? Provident, fugit architecto possimus numquam animi dolorum, corrupti, harum praesentium porro ullam ea ipsam quis. Vel quisquam, pariatur ullam ipsum distinctio adipisci hic quos. In assumenda temporibus hic beatae perferendis sequi minima laboriosam quia ullam? Recusandae, facere voluptate culpa adipisci eum molestiae ipsa numquam voluptates architecto. Porro ratione eos id quod nostrum, mollitia sequi dolore quaerat voluptas veritatis quia delectus perferendis officiis nulla autem esse illo. Ratione odio repudiandae repellendus voluptatum amet saepe unde eum distinctio cumque?</p>
+    </section>
+
+    <section class="contact">
+        <h2>Contact</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sapiente voluptatem fuga veritatis sed iste id dolorem. Sequi saepe deserunt consequuntur! Earum molestias, ad consequuntur dolorum quaerat voluptate pariatur, commodi, ab sunt provident eum. Quis fugit molestias autem soluta tenetur provident blanditiis, iure repellendus temporibus ex dolores ut aspernatur id asperiores unde adipisci voluptate, dolorum eaque, deleniti corporis cumque voluptatum. Animi exercitationem, eveniet numquam est doloribus sequi nemo quod, maiores illo nesciunt, accusamus dignissimos ipsa?</p>
+    </section>
+
+    <footer>
+        <ul>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Github</a></li>
+            <li><a href="#">LinkedIn</a></li>
+        </ul>
+    </footer>
+</body>
+</html>
